# CourseProjects

./: README.md
Asteroid/: CMakeLists.txt  Day20_FinalProjectPhase1.md  readme.org
Asteroid/include/: asteroid.h  game.h  laser.h  ship.h  window.h
Asteroid/src/: asteroid.cpp  game.cpp  laser.cpp  main.cpp  ship.cpp  window.cpp
Cross-platform Real-time Chat/ReactChatClient/reactchatroomfrontend/: package-lock.json  package.json
Cross-platform Real-time Chat/ReactChatClient/reactchatroomfrontend/public/: index.html
Cross-platform Real-time Chat/ReactChatClient/reactchatroomfrontend/src/: App.css  App.js  ChatPage.css  ChatPage.js  ChatPage2.css  ChatPage2.js  Login.css  Login.js  index.js
Cross-platform Real-time Chat/ReactNativeChatClient/: App.js  package-lock.json  package.json
Cross-platform Real-time Chat/ReactNativeChatClient/screens/: ChatScreen.js  LoginScreen.js
Cross-platform Real-time Chat/ThreadedWebServer/resources/: app.js
Cross-platform Real-time Chat/ThreadedWebServer/resources_1stDayPage/: Atlanta_Result.txt  Macon_Result.txt  app.js  index.html  style.css  test.html
Cross-platform Real-time Chat/ThreadedWebServer/resources_ChatRoom/: app.js  index.html  style.css
Cross-platform Real-time Chat/ThreadedWebServer/src/: ChatRoom.java  ChatServer.java  ClientHandler.java  HTTPRequest.java  HTTPResponse.java  Server.java  User.java  WebSocketConnection.java  WebSocketFrame.java  WebSocketHandler.java
GUI_Synthesizer/: README.md  pom.xml
Machine Learning/: Perceptron.ipynb  RandomForest.ipynb
NotTheBees/: app.js  index.html  style.css
(+30 files in other folders)
